# OpenSmartDocs

./: .gitignore  README.md  config.json  pyproject.toml  start.sh
src/onedrive_ollama_pipeline/: .structure_state.json  __init__.py  admin_app.py  cli.py  config.py  database.py  logging_utils.py  ollama_client.py  onedrive_client.py  pdf_processor.py  pipeline.py  prompt_loader.py  state_store.py  structure_service.py
src/onedrive_ollama_pipeline/prompts/: metadata_system_prompt.txt  metadata_user_prompt.txt  quick_test_prompt.txt  structure_fix_prompt_template.txt  structure_fix_system_prompt.txt  structure_guidelines.txt  structure_plan_prompt_template.txt  structure_system_prompt.txt  structure_validation_prompt_template.txt  structure_validation_system_prompt.txt  test_model_system_prompt.txt  test_model_user_prompt.txt
src/onedrive_ollama_pipeline/static/: admin.html
src/onedrive_ollama_pipeline/structure/: __init__.py  constants.py  models.py  plan_engine.py  prompt_builder.py  service.py
tests/: test_admin_app.py  test_ollama_client.py  test_onedrive_client.py  test_pdf_processor.py  test_pipeline.py  test_state_store.py  test_structure_service.py
